--- a/app/views/invoices/activities/components/_third_full_data.html.slim
+++ b/app/views/invoices/activities/components/_third_full_data.html.slim
@@ -5,6 +5,6 @@
         | Información
   .collapse aria-labelledby="headingUserInfo" data-parent="#userAccordion" id="collapseInfo"
     .card-body
-      br = sale.third_cellphone
-      br = sale.third_phone
-      br = sale.third_address_description
+      p Celular: #{sale.third_cellphone}
+      p Telefono: #{sale.third_phone}
+      p Direccioón: #{sale.third_address_description}
