--- a/app/views/users/_form.html.slim
+++ b/app/views/users/_form.html.slim
@@ -41,4 +41,4 @@
                             { include_blank: false },
                             { name: 'user[role_ids][]', class: 'form-control' }
 
-  = f.submit 'Create', class: 'btn btn-primary'
+  = f.submit 'Actualizar', class: 'btn btn-primary'
