--- a/app/views/components/_navbar_clients.html.slim
+++ b/app/views/components/_navbar_clients.html.slim
@@ -4,6 +4,8 @@ ul.nav.nav-tabs
   li.nav-item
     = link_to 'Facturas', client_invoices_path(@client), class: "nav-link #{controller_name == 'invoices' ? 'active' : ''}"
   li.nav-item
+    = link_to 'Actividades', client_activities_path(@client), class: "nav-link #{controller_name == 'activities' ? 'active' : ''}"
+  li.nav-item
     = link_to 'Contactos', client_contacts_path(@client), class: "nav-link #{controller_name == 'contacts' ? 'active' : ''}"
 
 .tab-content
