--- a/app/views/invoices/_form_fields.html.slim
+++ b/app/views/invoices/_form_fields.html.slim
@@ -36,3 +36,8 @@
   = f.label :total, class: 'col-sm-2 col-form-label'
   .col-sm-10
     = f.number_field :total, class: 'form-control'
+
+.form-group.row
+  = f.label :balance, class: 'col-sm-2 col-form-label'
+  .col-sm-10
+    = f.number_field :balance, class: 'form-control', disabled: true
