--- a/app/views/invoices/activities/todos/index.html.slim
+++ b/app/views/invoices/activities/todos/index.html.slim
@@ -11,6 +11,7 @@ hr
     hr
     .accordion id="userAccordion"
       = render 'invoices/activities/components/third_full_data', sale: @sale
+      = render 'invoices/activities/components/payment_data', sale: @sale
       = render 'invoices/activities/components/third_contacts', sale: @sale
 
   .col-md-9
