--- a/app/views/invoices/activities/payment_promises/_payment_promise.html.slim
+++ b/app/views/invoices/activities/payment_promises/_payment_promise.html.slim
@@ -21,6 +21,7 @@
         p 
           | Factura: 
           = link_to payment_promise.invoice_code, edit_invoices_sale_path(payment_promise.invoice)
+        p Creado por: #{payment_promise.created_by_name}
 
   .card-footer.d-flex
     - if payment_promise.pending_task?
