--- a/app/views/components/_flash.html.slim
+++ b/app/views/components/_flash.html.slim
@@ -1,5 +1,6 @@
-- flash.each do |key, value|
-  div class="alert alert-#{ flash_class(key) } alert-dismissible fade show" role="alert"
-    = value
-    button type="button" class="close" data-dismiss="alert" aria-label="Close"
-      span aria-hidden="true" &times;
+#flash-messages
+  - flash.each do |key, value|
+    div class="alert alert-#{ flash_class(key) } alert-dismissible fade show" role="alert"
+      = value
+      button type="button" class="close" data-dismiss="alert" aria-label="Close"
+        span aria-hidden="true" &times;
