--- a/app/views/users/edit.html.slim
+++ b/app/views/users/edit.html.slim
@@ -2,3 +2,5 @@
          links: [[users_path, 'Usuarios'], ['Editar']]
 
 = render 'form'
+
+= link_to "Conectar con Gmail", user_google_oauth2_omniauth_authorize_path
