--- a/app/views/dashboard/index.html.slim
+++ b/app/views/dashboard/index.html.slim
@@ -1,5 +1,5 @@
 h1 Dashboard
 p index
 
-= link_to 'Exportar', new_export_path, class: 'btn btn-primary'
+= link_to 'Importar', new_export_path, class: 'btn btn-primary'
 = @enterprise.name
