--- a/app/views/users/edit.html.slim
+++ b/app/views/users/edit.html.slim
@@ -3,4 +3,4 @@
 
 = render 'form'
 
-= link_to "Conectar con Gmail", user_google_oauth2_omniauth_authorize_path
+// = link_to "Conectar con Gmail", user_google_oauth2_omniauth_authorize_path
