--- a/app/views/invoices/_form_fields.html.slim
+++ b/app/views/invoices/_form_fields.html.slim
@@ -41,3 +41,13 @@
   = f.label :balance, class: 'col-sm-2 col-form-label'
   .col-sm-10
     = f.number_field :balance, class: 'form-control', disabled: true
+
+.form-group.row
+  = f.label :collector_advisor_id, class: 'col-sm-2 col-form-label'
+  .col-sm-10
+    = f.collection_select :collector_advisor_id,
+                          @enterprise.users.with_role(:collection_advisor),
+                          :id,
+                          :name,
+                          { include_blank: true },
+                          { class: 'form-control' }
