--- a/app/views/invoices/activities/components/_third_basic_data.html.slim
+++ b/app/views/invoices/activities/components/_third_basic_data.html.slim
@@ -1,8 +1,8 @@
 .card
   .card-body
     p.card-text
-      h3 = sale.third_name
+      h3 = link_to sale.third_name, edit_client_path(sale.third)
       br = sale.third_email
-
+      = render 'components/bills_status_client', client: sale.third
       hr
       = render '/components/activities_links'
