--- a/app/views/thirds/clients/contacts/_form.html.slim
+++ b/app/views/thirds/clients/contacts/_form.html.slim
@@ -1,22 +1,4 @@
 = form_with model: [@client, @contact] do |f|
-  .form-group.row
-    = f.label :full_name, class: 'col-sm-2 col-form-label'
-    .col-sm-10
-      = f.text_field :full_name, class: 'form-control'
-
-  .form-group.row
-    = f.label :phone, class: 'col-sm-2 col-form-label'
-    .col-sm-10
-      = f.text_field :phone, class: 'form-control'
-
-  .form-group.row
-    = f.label :cellphone, class: 'col-sm-2 col-form-label'
-    .col-sm-10
-      = f.text_field :cellphone, class: 'form-control'
-
-  .form-group.row
-    = f.label :email, class: 'col-sm-2 col-form-label'
-    .col-sm-10
-      = f.text_field :email, class: 'form-control'
+  = render 'fields', f: f
 
   = f.submit 'Guardar', class: 'btn btn-primary'
