public info to clients

--- a/app/views/components/_bills_status_client.html.slim
+++ b/app/views/components/_bills_status_client.html.slim
@@ -3,3 +3,5 @@
 h4 Total a Cobrar: #{client.total_receivable}
 h5.text-danger Vencido: #{client.total_expired}
 h5.text-primary No vencido: #{client.total_not_expired}
+
+p = link_to public_client_url(client), public_client_path(client), target: "_blank"
