--- a/app/views/invoices/activities/calls/_form.html.slim
+++ b/app/views/invoices/activities/calls/_form.html.slim
@@ -1,6 +1,20 @@
 = form_with model: [@sale, @call], local: true do |f|
 
-  = render '/invoices/activities/common_field', f: f
+  = render '/invoices/activities/common_field', f: f, object: @call
+
+  #contact
+    .form-group.row
+      = f.label :contact, class: 'col-sm-2 col-form-label'
+      .col-sm-10.input-group
+        = f.collection_select :contact_id,
+                              @sale.third.contacts,
+                              :id,
+                              :full_name,
+                              { include_blank: false },
+                              { class: 'form-control' }
+                    
+        .input-group-append
+          //= link_to 'Nuevo', new_invoices_sale_activities_contact_path(@sale), class: 'btn btn-outline-primary', remote: true
 
   .form-group.row
     = f.label :call_outcome, class: 'col-sm-2 col-form-label'
