--- a/app/views/invoices/activities/payment_promises/_form.html.slim
+++ b/app/views/invoices/activities/payment_promises/_form.html.slim
@@ -1,5 +1,5 @@
 = form_with model: [@sale, @payment_promise] do |f|
 
-  = render '/invoices/activities/common_field', f: f
+  = render '/invoices/activities/common_field', f: f, object: @payment_promise
 
   = f.submit 'Guardar', class: 'btn btn-primary'
