--- a/app/views/invoices/activities/visits/_form.html.slim
+++ b/app/views/invoices/activities/visits/_form.html.slim
@@ -1,5 +1,5 @@
 = form_with model: [@sale, @visit] do |f|
 
-  = render '/invoices/activities/common_field', f: f
+  = render '/invoices/activities/common_field', f: f, object: @visit
   
   = f.submit 'Guardar', class: 'btn btn-primary'
