--- a/app/views/invoices/activities/payment_promises/edit.html.slim
+++ b/app/views/invoices/activities/payment_promises/edit.html.slim
@@ -5,3 +5,10 @@
           ['Promesa de Pago']]
 
 = render 'form'
+
+hr
+h4 Notas
+= render 'components/notes', model: @payment_promise.class, object: @payment_promise
+= link_to 'Agregar Nota',
+          new_note_path(model: @payment_promise.class, id: @payment_promise.id),
+          data: { remote: true }
