--- a/app/views/invoices/sales/edit.html.slim
+++ b/app/views/invoices/sales/edit.html.slim
@@ -7,3 +7,10 @@ br
 = link_to 'Actividades', invoices_sale_activities_path(@sale), class: 'btn btn-primary'
 br
 = link_to 'Pagos', invoices_sale_payments_path(@sale), class: 'btn btn-primary'
+
+hr
+h4 Notas
+= render 'components/notes', model: @sale.class, object: @sale
+= link_to 'Agregar Nota',
+          new_note_path(model: @sale.class, id: @sale.id),
+          data: { remote: true }
