footer to the app

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -14,4 +14,9 @@
     <%= render '/components/flash' %>
     <%= yield %>
   </body>
+  <footer class="py-4 bg-light text-white-50">
+    <div class="container text-secondary text-center">© 2020 Copyright:
+      <a href="http://antuby.co"> antuby.co </a>
+    </div>
+  </footer>
 </html>
