--- a/app/views/invoices/sales/_form.html.slim
+++ b/app/views/invoices/sales/_form.html.slim
@@ -1,4 +1,11 @@
 = form_with model: @sale do |f|
   = render '/invoices/form_fields', f: f
-  
-  = f.submit 'Guardar', class: 'btn btn-primary'
+
+  .btn-group.mr-2  
+    = f.submit 'Guardar', class: 'btn btn-primary'
+
+  - if !@sale.new_record?
+    .btn-group.mr-2
+      = link_to 'Actividades', invoices_sale_activities_path(@sale), class: 'btn btn-primary'
+    .btn-group.mr-2
+      = link_to 'Pagos', invoices_sale_payments_path(@sale), class: 'btn btn-primary'
