--- a/app/views/invoices/sales/_sale.html.slim
+++ b/app/views/invoices/sales/_sale.html.slim
@@ -10,5 +10,4 @@
       br
       | Fecha creación: #{sale.creation}
       br
-      | Fecha Expiración: #{sale.expiration}
-
+      | Vencimiento: #{sale.expiration}
