--- a/app/views/invoices/activities/emails/edit.html.slim
+++ b/app/views/invoices/activities/emails/edit.html.slim
@@ -2,7 +2,7 @@
          links: [[invoices_sales_path, 'Facturas de Venta'],
           [edit_invoices_sale_path(@sale), @sale.code],
           [invoices_sale_activities_path(@sale), 'Actividades'],
-          ['Llamada']]
+          ['Email']]
 
 = render 'form'
 
