--- a/app/views/invoices/activities/emails/new.html.slim
+++ b/app/views/invoices/activities/emails/new.html.slim
@@ -2,6 +2,6 @@
          links: [[invoices_sales_path, 'Facturas de Venta'],
           [edit_invoices_sale_path(@sale), @sale.code],
           [invoices_sale_activities_path(@sale), 'Actividades'],
-          ['Nueva Llamada']]
+          ['Nuevo Email']]
 
 = render 'form'
