--- a/app/views/invoices/activities/components/_payment_data.html.slim
+++ b/app/views/invoices/activities/components/_payment_data.html.slim
@@ -1,3 +1,4 @@
+- sale = presenter(sale)
 .card
   .card-header id="payment_data"
     h2.mb-0
@@ -5,11 +6,14 @@
         | Información de Pagos
   .collapse aria-labelledby="payment_data" data-parent="#userAccordion" id="paymentInfo"
     .card-body
-      p Total: #{sale.total}
-      p Saldo: #{sale.balance}
-      p Fecha de Vencimiento: #{sale.expiration_date}
+      p Total: #{sale.total_currency}
+      p Saldo: #{sale.balance_currency}
+      p Vencimiento: #{sale.expiration_date}
       - if sale.payments.exists?
         p Fecha Ultimos Pago: #{sale.payments.last.payment_date}
         p Valor Ultimos Pago: #{sale.payments.last.amount}
 
-      = link_to 'Crear Pago', new_invoices_sale_payment_path(sale), class: 'btn btn-primary'
+      .btn-group.mr-2
+        = link_to 'Crear', new_invoices_sale_payment_path(sale), class: 'btn btn-primary'
+      .btn-group.mr-2
+        = link_to 'Ver', invoices_sale_payments_path(sale), class: 'btn btn-primary'
