--- a/app/views/invoices/activities/index.html.slim
+++ b/app/views/invoices/activities/index.html.slim
@@ -17,11 +17,14 @@ hr
     = render 'invoices/activities/components/nav_tabs', sale: @sale
     .tab-content
       br
-      - if @activities.exists?
-        - @activities.each do |activity|
-          = render activity
-        
-        == pagy_bootstrap_nav(@pagy)
-      - else
-        .alert.alert-secondary role="alert"
-          | No se han reportado actividades, presiona <a href="#" class="alert-link">aqui</a> para crear una.
+        .text-right
+          = link_to 'Tareas Pendientes', invoices_sale_activities_path(@sale, task: :pending), class: 'btn btn-primary'
+        br
+        - if @activities.exists?
+          - @activities.each do |activity|
+            = render activity
+          
+          == pagy_bootstrap_nav(@pagy)
+        - else
+          .alert.alert-secondary role="alert"
+            | No se han reportado actividades, presiona <a href="#" class="alert-link">aqui</a> para crear una.
