--- a/app/views/thirds/clients/index.html.slim
+++ b/app/views/thirds/clients/index.html.slim
@@ -2,4 +2,6 @@
          links: [['Clientes']]
 
 = link_to 'nuevo', new_client_path, class: 'btn btn-primary'
-= render 'components/table', records: @thirds
+= render 'components/table',
+         records: @thirds,
+         new_record: new_client_path
